# pyxend

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  extension.js  main.py  package.json  pyproject.toml  setup.py
example/: LICENSE  extension.js  main.py  package.json
pyvscode/: __init__.py  cli.py  license_gen.py  parser.py
pyvscode/templates/: .vscodeignore  extension.js.j2  main.py  package.json.j2
pyxend/: __init__.py  cli.py  requirements.txt
pyxend/templates/: extension.js.j2  main.py
