[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvscode"
version = "0.1.0"
description = "Python framework for building VS Code extensions"
readme = "README.md"
authors = [
  { name = "codeflane", email = "nta16022013@gmail.com" }
]
license = "LICENSE"
dependencies = [
  "click",
  "jinja2"
]
requires-python = ">=3.7"

[project.scripts]
pyvscode = "pyvscode.cli:cli"
